--- a/WorkSpider/biobw_org_spider/biobw_org_spider_result/w-3290.html
+++ b/WorkSpider/biobw_org_spider/biobw_org_spider_result/w-3290.html
@@ -2,10 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>中国微生物菌种查询网 / 2018-12-07</title>
+<title>大肠杆菌菌株的基因型符号及含义都在这里，快来查看！</title>
 </head>
 <body>
 <div class = "source"></div>
 <div class = "user"></div>
-<div class = "time"></div>
+<div class = "time">2018-12-07</div>
 <content>
+野生的大肠杆菌（E.coli）的基因组DNA中有470万个碱基对（bp)，内含4288个基因。E.coli基因组中还包含有许多插入序列，如λ-噬菌体片段和一些其他特殊组份的片段，这些插入的片段都是由基因的水平转移和基因重组而形成的，由此表明了基因组具有它的可塑造性。利用大肠杆菌基因组的这种特性对其进行改造，使其中的某些基因发生突变或缺失，从而给大肠杆菌带来可以观察到的变化，这种能观察到的特征叫做大肠杆菌的表现型 (Phenotype)，把引起这种变化的基因构成叫做大肠杆菌的基因型（Genotype)。具有不同基因型的菌株表现出不同的特性。这些不同基因型特性的菌株在基因工程的研究和生产中具有广泛的应用价值。<p>
+<a href="http://www.biobw.org/search.html?encode=YToyOntzOjg6ImtleXdvcmRzIjtzOjEyOiLlpKfogqDmnYboj4wiO3M6MTg6InNlYXJjaF9lbmNvZGVfdGltZSI7aToxNTQ0MTQ3Mjc3O30=" target="_blank">大肠杆菌</a>基因型的表示方法有如下几种：<p>
+1．根据基因产物或其作用产物的英文名称的第一个字母缩写成三个斜体字母来表示。<p>
+例如：DNA Adenine Methylase→dam。<p>
+2．变异基因不同，导致的结果相同时，用其作用结果的英文名称的前三个字母斜体后加上一个大写字母来表示区别。<p>
+例如：Recombination→recA、recB、recC。<p>
+3．某个基因或某个领域缺失时，在其基因型前面加上“Δ”表示。<p>
+例如：lac-proAB基因缺失时它的基因型表示为Δ(lac-proAB)。<p>
+4．野生的大肠杆菌具有F因子（质粒）和噬菌体插入片段，当这些质粒或噬菌体片段变异或缺失时，用（ )”或“/”等以区别。<p>
+例如：/F' [traD36、proAB、lacIq、lacZΔM15]。<p>
+5．由于某种基因的变异导致大肠杆菌可以明显观察到特征变化，有时也用其表现型代替基因型进行表示。<p>
+例如：某些抗药性的获得或丧失，用如下方式表示：Streptomycin抗性→Str +或Strr，Ampicillin敏感性→Amp-。 (第一个字母要大写,“+”或“r”表示有抗性,“-”表示无抗性或敏感)。<p>
+6．根据某些特异性蛋白的变异及其导致的结果变化进行表示。<p>
+例如：TH2菌株上有一种基因型表示如下：hsdS20 (rB-、mB-)，其中S20代表特异性识别蛋白发生变异，()中的 rB-、mB-表示由于S20的变异而导致B株来源的hsdR和hsdM的功能缺失。<p>
+使用时注意：<p>
+● 基因工程中，经常使用的大肠杆菌几乎都来自于K-12菌株，最近也经常使用由B株及C株来源的大肠杆菌。<p>
+● 大肠杆菌B株原来就为lon-，另外MV1184株不具有琥珀抑制基因 (Amber supperssor free)，由于这些都是原始菌株所不具备的基因，因此不在基因型中加以表示，要注意。<p>
+</content>
+</body>
+</html>
