--- a/WorkSpider/biobw_org_spider/biobw_org_spider_result/w-3291.html
+++ b/WorkSpider/biobw_org_spider/biobw_org_spider_result/w-3291.html
@@ -2,10 +2,25 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>中国微生物菌种查询网 / 2018-12-07</title>
+<title>和百欧博伟生物一起研究如何提高质粒的产量？</title>
 </head>
 <body>
 <div class = "source"></div>
 <div class = "user"></div>
-<div class = "time"></div>
+<div class = "time">2018-12-07</div>
 <content>
+绝大部分时间，质粒抽提是个小case也很简单，挑取单克隆后培养一段时间，用个试剂盒就能搞定。通常可以获得超过100ng/ul 的质粒，这对于常规实验如PCR，亚克隆，转染或者长期储存来说足够了。但是总有些时候，事情不尽如人意，那么如何提高质粒的产量就是我们今天要探讨的话题。<p>
+质粒的拷贝数<p>
+   质粒拷贝数是指在特定培养基中一个细菌细胞中质粒的个数。这个数字主要由质粒的复制起点（replication origin）决定，同时也受到插入片段的大小和性质，菌种，生长条件等因素影响。<p>
+    如果手头上的质粒是个低拷贝的质粒，那么最简单的提高产量的方法是用更大的培养体积和更多的试剂盒来抽提。在抽提的过程中可以用更大的裂解液体积进行纯化，但是注意不要超过了试剂盒说明书上标明的上限。对于某些质粒，如p15A, ColE1复制原点的，可以在培养基中添加氯霉素来增加质粒的拷贝数。<p>
+菌种<p>
+   市面上有很多种商业化的菌种可用于扩增和纯化质粒DNA，但是也增加了选择的难度。根据用途选择菌种也不是那么简单的事情，比如说HB101及其衍生菌株适合长期保存质粒，但是这个菌株会产生糖类物质会影响细胞的裂解效率和质粒的产量。再比如，Stbl3菌株可以极少的产生DNA重组，很适合用于扩增不稳定的质粒，但是他们的基因型是endA+的。endA 编码一个热稳定性的周质核酸内切酶，如果在纯化的过程中去除不干净，那么EndA会切断提纯的质粒，电泳检测的时候呈现smear状。DH5alpha菌是一个很好的质粒扩增质粒，因为他是endA1, recA1, relA1基因型的。这三个基因的突变提高了质粒的稳定性，产量。选择哪个菌株，还是要看你的用途，查看菌株的基因型来看看是否适合。<p>
+培养基，抗生素和接种物<p>
+   培养条件在质粒的产量中发挥重要作用，如下图所示，不同的培养条件会极大的影响质粒的产量。<p>
+对许多高拷贝的质粒来说，标准的LB培养基和正常的抗生素工作浓度就已经足够了。然而对许多低拷贝的质粒和生长缓慢的菌株来说，更改培养基组分可能是个不错的选择。低拷贝的质粒用更低的抗生素浓度可能会比较合适。<p>
+    另外，可以用富营养的培养基来获得更高的菌密度，这些培养基有Terrific Broth, 2xYT， H15等。在培养基中加入镁盐，缓冲液，和/或碳源如甘油、葡萄糖也会增加菌密度和质粒产量。为了达到最优的效果，推荐挑取新鲜克隆来进行接种，而不是用甘油菌做为菌种（有可能质粒丢失）。<p>
+时间，温度和通氧条件<p>
+    最后，优化培养时间，温度和摇床的转速来提高菌密度和质粒产量。对于典型的高拷贝质粒来说，培养时间一般在12-16个小时。而低拷贝质粒则需要培养20小时甚至更长。对于不同的质粒和菌株，需要单独优化，可以通过检测OD来测试。<p>
+</content>
+</body>
+</html>
