--- a/WorkSpider/biobw_org_spider/biobw_org_spider_result/w-3293.html
+++ b/WorkSpider/biobw_org_spider/biobw_org_spider_result/w-3293.html
@@ -2,10 +2,52 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>中国微生物菌种查询网 / 2018-12-07</title>
+<title>六种方法解决可怕的超级细菌！快来围观!</title>
 </head>
 <body>
 <div class = "source"></div>
 <div class = "user"></div>
-<div class = "time"></div>
+<div class = "time">2018-12-07</div>
 <content>
+以“菌”攻“菌”<p>
+如果药物失灵，何不以毒攻毒呢？<p>
+   几家新成立的生物科技公司希望借助我们对人体微生物群系的研究，即人体内有助于提高免疫、预防感染、调节新陈代谢的的有益微生物。这或能帮助科学家研发出一类专攻“超级细菌”的新型药物。超级细菌已对现有药物产生了耐药性，科学家预计到2050年之前，死于超级细菌的人数将超过癌症。<p>
+   位于美国麻省的Vedanta生物科技公司以“由于患者过度使用抗生素、削弱了体内的有益微生物群，才导致细菌感染”这一新理念为基础研发新药物。该公司借用世界各国对人体微生物群系的研究结果，，寻找能制成药片形式的益生菌。患者吞服后，益生菌便可进入肠道，激发免疫反应。<p>
+“以人体微生物群系为基础的疗法可替代抗生素、解决治疗需要。在治疗感染时，我们既不能诱发细菌耐药性，又不能破坏患者体内的益生菌群、导致患者更容易受到二次感染。” Vedanta公司CIE伯纳特·奥利（Bernat Olle）指出。<p>
+   但要注意的是，科学家对人体微生物群系的了解仍然有限。不过该领域研究正取得飞速进展，Vedanta公司已至少有两种药物即将进入临床试验阶段。如果它们能够起效，或能扭转当前抗击细菌感染的局势。<p>
+植入迷你半导体<p>
+    该设想由科罗拉多大学波尔多分校的研究人员提出。他们正致力于量子点（quantum dots）的研究，希望用它们来操控太阳能、并制造燃料。量子点是什么东西呢？简而言之，就是小小的半导体晶体。（光用“小”这个字可远远不够。用参与该项目的普拉山特·纳格帕尔（Prashant Nagpal）的话来说，量子点与头发丝的直径相比，就像一个街区与地球的面积相比一样。）<p>
+   纳格帕尔的同事阿努斯莉·查提特里（Anushree Chattetrjee）碰巧在研究对抗细菌感染的新疗法。于是纳格帕尔想到，这些对光线敏感的量子点或许也能用来消灭超级细菌。最终，他们研究出了一种新型量子点，可以选择性地攻击目标细菌。<p>
+“这些量子点可以分布在各个地方。治疗患者时，可以用光线激活相应的量子点，在清除体内感染的同时，避免杀死其它宿主细胞。量子点被激活后，产生的物质刚好对细菌细胞有毒，对宿主自身的细胞则无害。”<p>
+   利用细胞培养物的测试结果显示，这些量子点不会对健康的人体细胞造成影响。用来激活它们的光照强度也仅有室内光或日光水平（如果感染灶较深，也会用直指病灶的LED光）。<p>
+理论上来说，该疗法疗效十分显着，因此剂量只需传统药物的一百万分之一即可达到效果。<p>
+量子点易于生产、成本低廉，如果全球普遍采用该疗法，等于每剂药还不到几美分。<p>
+“采用极少量该药物、再加以光照，便可治愈我们在科罗拉多一家医院中找到的最严重的超级细菌感染。”纳格帕尔说道，“当然，我们还需在临床前和临床试验中进行大量研究工作，然后才能将这些药物用在患者身上。不过，我们的初步研究相当可喜。”<p>
+量子点技术可用于癌症成像，也可用来打击耐药细菌。量子点技术可用于癌症成像，也可用来打击耐药细菌。<p>
+抗感染聚合物<p>
+   能杀死超级细菌的也许不止抗生素。墨尔本大学的研究人员就找到了一种可消灭致命细菌的全新疗法。<p>
+他们发现15年前制造的一种用于增加汽车涂料和机油黏性的星形聚合物也可用于生物领域。在研究该聚合物输送癌症药物的能力时，科学家发现一种名为Snapp（全称Structurally Nanoengineered Antimicrobial Peptide Polymers，意味结构性纳米工程杀菌聚合物）的变种对细菌有一定毒性。<p>
+该聚合物的杀菌原理之一是，融入细菌细胞膜，使脂质层暴露在外，从而破坏细菌细胞壁。<p>
+研究人员认为，若资金到位，他们五年内便能开展人体试验。“这种星形聚合物可以轻松进行大规模生产，并且造价不贵。整个过程中最慢的可能就是获得监管机构批准了。”墨尔本大学工程学院的化学工程师格雷格·乔（Greg Qiao）表示。<p>
+实验室与医院合作<p>
+医学界和整个科学界的一大问题是，研究人员无法经常与医生直接开展合作、解决健康问题。因此科学界往往会遗漏与病人直接接触才能获得的关键信息。<p>
+在美国乔治亚州埃默里大学，医生和科学界正在联手研究如何诊断和治疗耐药细菌引发的感染。“我不是医生。因此我需要从医生那里了解大量与病人打交道时获取的信息，才能让我们的研究尽可能接近真实情况。”<p>
+科学家已经提出一种新型测试法，可帮助医生确定患者体内具有耐药性的是哪一种细菌。这是该合作项目到目前为止取得的最大成果。在该模型的成功基础上，其它临床机构也建立了自己的研究中心，为医生和研究人员提供合作平台。<p>
+学术界与产业界联手<p>
+我们迫切需要新型抗生素，但制药公司已经有30年没发明新的药物了。这是因为药物研发极为昂贵，最终产品又利润菲薄。<p>
+为解决这一问题，费城一家名为Pew Charitable Trusts的公共政策非营利性组织提出了“抗生素研发与知识共享平台”（全称Shared Platform for Antibiotic Research and Knowledge）。这是一座以云端为基础的虚拟“图书馆”，收藏了丰富的抗生素研究数据与分析结果。科学家可以利用这些资源展开合作，做出新的发现。“类似的数据共享资源已经促进了其它领域的药物研发，如癌症、热带疾病和结核病等。”该组织抗生素耐药性项目主管凯西·塔金顿（Kathy Talkington）表示，“我们希望这一平台对耐药性细菌也能起到相同的效果。我们预计该平台将于明年对公众开放，供全世界的研究人员使用。”<p>
+该组织希望，该平台能够帮助科学家进行跨学科合作，找到研发抗生素的新途径。此外，学术界与产业界的合作也许能终结多年没有新抗生素诞生的窘境。<p>
+面对这一问题，美国疾控中心也有自己的工作网络。该机构于2016年成立了抗生素耐药性实验室网络（Antibiotic Resistance Lab Network），大大提高了该组织检测抗生素耐药性的能力，在医疗、食品或社区等领域都有利用价值。<p>
+全美设有多家实验室，追踪并分享各医院、医生和科学机构研发诊断方式和新型疗法过程中的数据。除了这些核心实验室之外，疾控中心分布在各州的实验室还获得了额外资助，可对一系列耐药性细菌展开基因测试。<p>
+为应对这场不断加剧的抗生素耐药性危机，必须集结各方之力。<p>
+“抗生素耐药性实验室网络提高了我们检测并识别美国境内新型耐药性细菌的能力，”抗生素政策与协作分部的科学团队主管珍·佩特尔（Jean Patel）指出，“该网络包含的实验室目前主要关注针对特定细菌的测试，这将为阻止耐药细菌感染的传播提供关键信息。”<p>
+MRSA细菌可引发感染，且对大部分抗生素都有耐药性。不过部分菌株可用万古霉素进行治疗。MRSA细菌可引发感染，且对大部分抗生素都有耐药性。不过部分菌株可用万古霉素进行治疗。<p>
+加强现有抗生素药效<p>
+一种名为万古霉素的抗生素用于治疗感染已有60多年。它被视作“最后一步棋”，只有当其它疗法都不奏效时才会使用它，因为还没有对它耐药的细菌——但这已经是过去的事了。<p>
+近年来，科学家已经发现了对万古霉素耐药的病例。为此，科学家试图修改万古霉素的分子结构，以增强其药效。目前已经提出了三种修改版本。最新提出的两种是加州斯克利普斯研究所的戴尔·伯尔格（Dale Bolger）及其团队的研究成果。他们为万古霉素添加了杀菌的“新武器”。<p>
+“两种版本的药效都有所加强，在细菌产生耐药性之前也能坚持更长时间。”伯尔格表示。细菌需要很长时间才能培养出对新型万古霉素的耐药性。在修改后的灭菌机制中，第一种便已“效果强劲，至少还能在临床上使用50年。就算细菌设法逃过了此劫，也会被另外两种灭菌机制杀灭，也就无法产生耐药性。”科学家目前正在努力降低新版万古霉素的生产难度。<p>
+但伯尔格表示，这项研究“十分激动人心”。最终，科学家一定能研发出一种难以产生耐药性的抗生素，成为拯救千万人生命的最后防线。<p>
+无论是增强药效、研发杀菌聚合物、植入迷你半导体、还是其它新方法，都在向我们传达积极信号：科学家仍在不懈奋斗、着手解决现代人类面临的最大健康问题。<p>
+</content>
+</body>
+</html>
